boinc (7.0.33+dfsg-1) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * New upstream version
  * Conditional builds of debian/control

  [ Guo Yixuan ]
  * debian/rules: disable optimization in api/, for SETI to work.

 -- Steffen Moeller <moeller@debian.org>  Sat, 30 Jun 2012 21:59:59 +0200

boinc (7.0.32+dfsg-1) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * New upstream version.

 -- Guo Yixuan <culu.gyx@gmail.com>  Wed, 01 Aug 2012 21:02:49 +0200

boinc (7.0.31+dfsg-1) unstable; urgency=low

  [ Steffen Moeller ]
  * New upstream version.

  [ Guo Yixuan ]
  * debian/control:
    - add missed dependency for libboinc.
    - remove dependency on python-support.
    - libboinc-app-dev: depend on libboinc.
  * debian/watch: check for even minor version, and fix dpkg warnings.
  * debian/rules:
    - use dh_python2 instead of py_support.
    - remove build-stamp, use override_dh_auto_build to build samples.
    - simplify targets by using pattern rule.
    - use override_dh_clean instead of a custom clean target.

 -- Guo Yixuan <culu.gyx@gmail.com>  Tue, 10 Jul 2012 23:21:13 +0800

boinc (7.0.30+dfsg-1) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * New upstream version.

  [ Guo Yixuan ]
  * debian/rules: use dpkg-buildflags to get default flags.
  * debian/control: build-depend on dpkg-dev >= 1.16.1.1, because
    buildflags.mk and DEB_BUILD_MAINT_OPTIONS are needed.
  * debian/patches/add_hardening_flags.patch: pass CXXFLAGS, CPPFLAGS and
    LDFLAGS to hand-written Makefiles in samples/.
  * Add myself to uploaders. (Closes: #511243)

 -- Steffen Moeller <moeller@debian.org>  Sat, 30 Jun 2012 21:59:59 +0200

boinc (7.0.28+dfsg-3) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Splitting -dev package into libboinc and libboinc-dev.
  * Added shared library for libboinc.
  * Added configure flag in debian/rules to allow dynamic clients
  * Installing more from  debian/tmp to avoid lintian wrappers
 
  [ Guo Yixuan ]